--- a/css/weather.css
+++ b/css/weather.css
@@ -1,3 +1,28 @@
 body {
   font-family: sans-serif;
 }
+
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.flex1 {
+  flex: 1;
+  text-align: center;
+}
+
+.flex2 {
+  flex: 2;
+  text-align: center;
+}
+
+.temp {
+  font-size: 3rem;
+  color: gold;
+}
+
+#tempUnit {
+
+}
