--- a/css/weather.css
+++ b/css/weather.css
@@ -5,7 +5,7 @@ body {
 .container{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .flex1 {
@@ -25,4 +25,8 @@ body {
 
 #tempUnit {
 
+}
+
+.icon {
+  height: 6rem;
 }
