--- a/css/weather.css
+++ b/css/weather.css
@@ -6,16 +6,22 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  max-width: 30rem;
+  min-width: 20rem;
+}
+
+.cell {
+  text-align: center;
+  align-self: center;
+  margin: -1rem 0 -1rem 0;
 }
 
 .flex1 {
   flex: 1;
-  text-align: center;
 }
 
 .flex2 {
   flex: 2;
-  text-align: center;
 }
 
 .temp {
@@ -29,4 +35,12 @@ body {
 
 .icon {
   height: 6rem;
+}
+
+.controls {
+  margin: 6rem;
+}
+
+#windDegrees {
+  font-size: 3rem;
 }
