Adds sunrise and sunset icons

--- a/css/weather.css
+++ b/css/weather.css
@@ -49,3 +49,13 @@ body {
 .wait {
   cursor:wait
 }
+
+.sun {
+  height: 2rem;
+  padding-right: .5rem;
+}
+.sunriseTime{
+}
+.sunsetTime{
+  vertical-align:top;
+}
